<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_pink"
    tools:context="br.com.tratto.Activity.RegisterCompanyActivity">

    <RelativeLayout
        android:id="@+id/input_field_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="84dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/text_field_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="36dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.tratto.CustomView.FontEditText
                    android:id="@+id/text_company_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_company_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    font:customFont="Roboto_Regular.ttf" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.tratto.CustomView.FontEditText
                    android:id="@+id/text_company_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_person_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    font:customFont="Roboto_Regular.ttf" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <br.com.tratto.CustomView.FontEditText
                    android:id="@+id/text_person_cnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_company_cnpj"
                    android:inputType="number"
                    android:maxLines="1"
                    font:customFont="Roboto_Regular.ttf" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_company_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:entries="@array/register_company_category"
                android:prompt="@string/register_company_category_prompt"
                android:spinnerMode="dropdown"
                android:theme="@style/spinnerStyle" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/mid_dark_gray" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_field_container">

            <br.com.tratto.CustomView.FontButton
                android:id="@+id/btn_create_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@color/light_blue"
                android:text="@string/create_person_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <br.com.tratto.CustomView.FontCheckBox
                android:id="@+id/check_company_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="0dp"
                android:text="@string/register_confirm_manager"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:theme="@style/checkBoxStyle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                font:customFont="Roboto_Regular.ttf" />

            <br.com.tratto.CustomView.FontCheckBox
                android:id="@+id/check_company_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_terms"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:theme="@style/checkBoxStyle"
                app:layout_constraintLeft_toLeftOf="@+id/check_company_manager"
                app:layout_constraintTop_toBottomOf="@+id/check_company_manager"
                font:customFont="Roboto_Regular.ttf" />

            <br.com.tratto.CustomView.FontButton
                android:id="@+id/btn_company_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/terms_condition"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/check_company_license"
                app:layout_constraintLeft_toRightOf="@+id/check_company_license"
                app:layout_constraintTop_toTopOf="@+id/check_company_license"
                font:customFont="Roboto_Regular.ttf" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_register_company_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/input_field_container"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-48dp"
        android:src="@drawable/user_placeholder"
        app:civ_border_color="@color/mid_dark_gray"
        app:civ_border_width="1dp" />

</RelativeLayout>
