<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tratto.Activity.ResponsibleUserActivity">

    <LinearLayout
        android:id="@+id/text_field_container_00001"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.com.tratto.CustomView.FontEditText
                android:id="@+id/text_responsible_user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsible_user_name_placeholder"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="70"
                android:maxLines="1"
                font:customFont="Roboto_Regular.ttf" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.com.tratto.CustomView.FontEditText
                android:id="@+id/text_responsible_user_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsible_user_cpf_placeholder"
                android:inputType="number"
                android:maxLines="1"
                font:customFont="Roboto_Regular.ttf" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.com.tratto.CustomView.FontEditText
                android:id="@+id/text_responsible_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsible_user_email_placeholder"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                font:customFont="Roboto_Regular.ttf" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <br.com.tratto.CustomView.FontButton
        android:id="@+id/btn_create_responsible_user_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:text="@string/responsible_user_continue_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        font:customFont="Roboto_Regular.ttf" />
</android.support.constraint.ConstraintLayout>
